--- a/08-contrastes-parametricos.qmd
+++ b/08-contrastes-parametricos.qmd
@@ -41,7 +41,7 @@ El investigador, de acuerdo a su experiencia o a estudios previos, suele tener c
 Una *hipótesis estadística* es cualquier afirmación o conjetura que determina, total o parcialmente, la distribución de una o varias variables de la población.
 :::
 
-:::{#exm-}
+:::{#exm-hipotesis-estadistica}
 Para contrastar el rendimiento académico de un grupo de alumnos en una determinada asignatura, podríamos platear la hipótesis de si el porcentaje de aprobados es mayor del 50%.
 :::
 
@@ -338,15 +338,17 @@ $$1-\beta = 1-0.9536 = 0.0464,$$
 
 lo que indica que no se trataría de un buen contraste para detectar diferencias de un 10% en el valor del parámetro.
 
-## Relación del riesgo $\beta$ y el tamaño del efecto $\delta$
+## Relación del riesgo $\beta$ y el tamaño del efecto $\delta$ {auto-animate=true}
 
 El riesgo $\beta$ depende directamente de la mínima diferencia $\delta$ que se desea detectar con respecto al valor del parámetro que establece la hipótesis nula.
 
-![](/img/contrastes/riesgo_beta_tamaño_efecto_pequeño.svg){fig-alt="Riesgo beta para un tamaño del efecto pequeño." fig-align="center" width=80%}
+![](/img/contrastes/riesgo_beta_tamaño_efecto_pequeño.svg){.r-stretch fig-alt="Riesgo beta para un tamaño del efecto pequeño." fig-align="center"}
 
----
+## Relación del riesgo $\beta$ y el tamaño del efecto $\delta$ {auto-animate=true}
 
-![](/img/contrastes/riesgo_beta_tamaño_efecto_grande.svg){fig-alt="Riesgo beta para un tamaño del efecto grande." fig-align="center" width=80%}
+El riesgo $\beta$ depende directamente de la mínima diferencia $\delta$ que se desea detectar con respecto al valor del parámetro que establece la hipótesis nula.
+
+![](/img/contrastes/riesgo_beta_tamaño_efecto_grande.svg){.r-stretch fig-alt="Riesgo beta para un tamaño del efecto grande." fig-align="center"}
 
 ---
 
@@ -368,15 +370,17 @@ $$1-\beta = 1-0.8507 = 0.1493,$$
 aunque seguiría siendo un contraste poco potente.
 :::
 
-## Relación entre los riesgos $\alpha$ y $\beta$
+## Relación entre los riesgos $\alpha$ y $\beta$ {auto-animate=true}
 
 Los riesgos $\alpha$ y $\beta$ están enfrentados, es decir, cuando uno aumenta el otro disminuye y viceversa.
 
-![](/img/contrastes/relacion_riesgos_alpha_pequeño.svg){fig-alt="Riesgo beta para un tamaño del efecto pequeño." fig-align="center" width=80%}
+![](/img/contrastes/relacion_riesgos_alpha_pequeño.svg){.r-stretch fig-alt="Riesgo beta para un tamaño del efecto pequeño." fig-align="center"}
 
----
+## Relación entre los riesgos $\alpha$ y $\beta$ {auto-animate=true}
 
-![](/img/contrastes/relacion_riesgos_alpha_grande.svg){fig-alt="Riesgo beta para un tamaño del efecto grande." fig-align="center" width=80%}
+Los riesgos $\alpha$ y $\beta$ están enfrentados, es decir, cuando uno aumenta el otro disminuye y viceversa.
+
+![](/img/contrastes/relacion_riesgos_alpha_grande.svg){.r-stretch fig-alt="Riesgo beta para un tamaño del efecto grande." fig-align="center"}
 
 ---
 
@@ -395,15 +399,17 @@ y ahora la potencia ha subido hasta
 $$1-\beta = 1-0.8327 = 0.1673.$$
 :::
 
-## Relación de los riesgos de error y el tamaño muestral
+## Relación de los riesgos de error y el tamaño muestral {auto-animate=true}
 
 Los riesgos de error también dependen el tamaño de la muestra, ya que al aumentar el tamaño de la muestra, la dispersión del estadístico del contraste disminuye y con ello también lo hacen los riesgos de error.
 
-![](/img/contrastes/relacion_riesgos_tamaño_muestral_pequeño.svg){fig-alt="Riesgo beta para un tamaño del efecto grande." fig-align="center" width=80%}
+![](/img/contrastes/relacion_riesgos_tamaño_muestral_pequeño.svg){.r-stretch fig-alt="Riesgo beta para un tamaño del efecto grande." fig-align="center"}
 
----
+## Relación de los riesgos de error y el tamaño muestral {auto-animate=true}
 
-![](/img/contrastes/relacion_riesgos_tamaño_muestral_grande.svg){fig-alt="Riesgo beta para un tamaño del efecto grande." fig-align="center" width=80%}
+Los riesgos de error también dependen el tamaño de la muestra, ya que al aumentar el tamaño de la muestra, la dispersión del estadístico del contraste disminuye y con ello también lo hacen los riesgos de error.
+
+![](/img/contrastes/relacion_riesgos_tamaño_muestral_grande.svg){.r-stretch fig-alt="Riesgo beta para un tamaño del efecto grande." fig-align="center"}
 
 ---
 
@@ -442,7 +448,7 @@ Un contraste será mejor cuanto mayor sea el área encerrada por debajo de la cu
 :::{#exm-curva-potencia}
 La curva de potencia correspondiente al contraste sobre la proporción de hombres en la población es la siguiente
 
-![](/img/contrastes/potencia.svg){fig-alt="Curva de potencia para muestras de distinto tamaño." fig-align="center" width=80%}
+![](/img/contrastes/potencia.svg){width=80% fig-alt="Curva de potencia para muestras de distinto tamaño." fig-align="center"}
 :::
 
 ### $p$-valor de un contraste de hipótesis
@@ -590,7 +596,7 @@ $$H_0: \mu=5 \quad H_1: \mu>5$$
 Para realizar el contraste se tiene:
 
 - $\bar x = \frac{6.3+\cdots+5.2}{10}=\frac{58.1}{10}=5.81$ puntos.
-- $\hat s^2 = \frac{(6.3-5.56)^2+\cdots+(5.2-5.56)^2}{9} = \frac{15.949}{9}=1.7721$ puntos$^2$, y $\hat s=1.3312$ puntos.
+- $\hat s^2 = \frac{(6.3-5.81)^2+\cdots+(5.2-5.81)^2}{9} = \frac{15.949}{9}=1.7721$ puntos$^2$, y $\hat s=1.3312$ puntos.
 
 Y el estadístico del contraste vale
 
@@ -731,7 +737,7 @@ $$
 Para realizar el contraste se tiene:
 
 - $\bar x = \frac{6.3+\cdots+5.2}{10}=\frac{58.1}{10}=5.81$ puntos.
-- $\hat s^2 = \frac{(6.3-5.56)^2+\cdots+(5.2-5.56)^2}{9} = \frac{15.949}{9}=1.7721$ puntos$^2$.
+- $\hat s^2 = \frac{(6.3-5.81)^2+\cdots+(5.2-5.81)^2}{9} = \frac{15.949}{9}=1.7721$ puntos$^2$.
 
 El estadístico del contraste vale
 
@@ -880,7 +886,7 @@ $$
 Para realizar el contraste, se tiene
 
 - $\bar{X}_1 = \frac{4+\cdots +3}{10}=5.3$ puntos y $\bar{X}_2=\frac{8+\cdots +7}{12}=6.75$ puntos.
-- $S_1^2= \frac{(4^2+\cdots + 3^2}{10}-5.3^2=3.21$ puntos$^2$ y $S_2^2= \frac{8^2+\cdots +3^2}{12}-6.75^2=2.69$ puntos$^2$.
+- $S_1^2= \frac{4^2+\cdots + 3^2}{10}-5.3^2=3.21$ puntos$^2$ y $S_2^2= \frac{8^2+\cdots +3^2}{12}-6.75^2=2.69$ puntos$^2$.
 - $\hat{S}_p^2 = \frac{10\cdot 3.21+12\cdot 2.6875}{10+12-2}= 3.2175$ puntos$^2$, y $\hat S_p=1.7937$.
 
 Si se suponen varianzas iguales, el estadístico del contraste vale
@@ -1034,6 +1040,7 @@ Z = \frac{\hat{p}_1-\hat{p_2}}{\sqrt{\frac{p_1(1-p_1)}{n_1}+\frac{p_2(1-p_2)}{n_
 $$
 
 y el $p$-valor del contraste es $2P(Z\leq -2.1483)= 0.0317$, de manera que se rechaza la hipótesis nula para $\alpha=0.05$ y se concluye que hay diferencias.
+:::
 
 ## Realización de contrastes mediante intervalos de confianza
 
